--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Simple Javascript quiz</title>
 </head>
 <body>
+    <div><a href="./sticky.html"> Sticky Positioning Page</a></div>
     <div id="quiz"></div>
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
